--- a/FlightLine.App/src/app/availability/availability.component.html
+++ b/FlightLine.App/src/app/availability/availability.component.html
@@ -5,6 +5,10 @@
             Back
         </button>
         <div class="av-title">Student Availability</div>
+        <div class="av-legend">
+            <i class="material-icons legend-icon">circle</i>
+            : Unavailable
+        </div>
     </div>
     <div class="calendar-container">
         <div class="calendar-grid">
@@ -29,12 +33,70 @@
                 </div>
             </div>
             <div class="calendar-scroll-grid">
-                <div class="legend-bar">
-                    
+                <div class="hour-bar">
+                    <div class="hour-label">1 AM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">2 AM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">3 AM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">4 AM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">5 AM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">6 AM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">7 AM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">8 AM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">9 AM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">10 AM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">11 AM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">12 PM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">1 PM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">2 PM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">3 PM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">4 PM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">5 PM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">6 PM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">7 PM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">8 PM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">9 PM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">10 PM</div>
+                    <div class="hour-divider"></div>
+                    <div class="hour-label">11 PM</div>
+                    <div class="hour-divider"></div>
                 </div>
                 <div *ngFor="let i of array168" class="hour-filler"></div>
                 <div class="scroll-spacer">
                     <div class="horizontal-sussy-overlapper"></div>
+                </div>
+                <div class="av-block-grid">
+                    <div class="unavailable-block hard-1">2:00 PM - 4:00 PM</div>
+
+                    <div class="unavailable-block hard-2">10:30 AM - 1:30 PM</div>
+                    <div class="unavailable-block hard-3">3:00 PM - 4:30 PM</div>
+
+                    <div class="unavailable-block hard-4">2:00 PM - 4:00 PM</div>
+
+                    <div class="unavailable-block hard-5">9:00 AM - 1:30 PM</div>
+                    <div class="unavailable-block hard-6">3:00 PM - 4:30 PM</div>
+
+                    <div class="unavailable-block hard-7">2:00 PM - 4:00 PM</div>
                 </div>
             </div>
         </div>
