--- a/FlightLine.App/src/app/form/form.component.html
+++ b/FlightLine.App/src/app/form/form.component.html
@@ -1,1 +1,57 @@
 <p>form works!</p>
+<div class="form">
+  <div class="page-one">
+    <div class="left-side">
+      <h1>Student Information</h1>
+      <div class="student-information">
+        <form
+          [formGroup]="contactForm"
+          (ngSubmit)="onSubmit()"
+          class="student-stuff"
+        >
+          <mat-form-field appearance="fill">
+            <mat-label>Student Name:</mat-label>
+            <input matInput />
+          </mat-form-field>
+
+          <mat-form-field appearance="fill">
+            <mat-label>Phone Number:</mat-label>
+            <input matInput />
+          </mat-form-field>
+
+          <mat-form-field appearance="fill">
+            <mat-label>Student Nummber:</mat-label>
+            <input matInput />
+          </mat-form-field>
+
+          <label for="studentNumber">Student Number:</label>
+          <input type="text" id="studentNumber" name="studentNumber" />
+
+          <label for="phoneNumber">Phone Number:</label>
+          <input type="text" id="phoneNumber" name="phoneNumber" />
+
+          <button mat-raised-button>Submit</button>
+        </form>
+
+        <div class="instructor-stuff">
+          <p>Instructor Name:</p>
+          <p>Team Number:</p>
+          <p>Last Activity:</p>
+          <p>TM Approval:</p>
+        </div>
+      </div>
+      <h1>Student Availabilty:</h1>
+      <p class="first-paragraph">
+        I have reviewed my current Flight Ops availability and it is correct. I
+        agree to be scheduled for this Stage/EOC Check during those times. If my
+        availability changes after today, it is my responsibility to personally
+        update my availability on the Flight Ops website by 1200 at least 2
+        business days prior in accordance with the policies in the FOM.
+      </p>
+      <p>
+        <b>Remarks: </b>
+      </p>
+    </div>
+    <div class="right-side"></div>
+  </div>
+</div>
