Initial Commit Part 2.1

--- a/FlightLine.App/src/app/form/form.component.html
+++ b/FlightLine.App/src/app/form/form.component.html
@@ -7,7 +7,7 @@
         <div class="form-group">
           <mat-form-field appearance="fill">
             <mat-label> Student Name </mat-label>
-            <input matInput />
+            <input matInput [(gModel)]=""/>
           </mat-form-field>
           <div class="form-group">
           <mat-form-field appearance="fill">
