--- a/FlightLine.App/src/app/form/form.component.scss
+++ b/FlightLine.App/src/app/form/form.component.scss
@@ -1,15 +1,25 @@
 .form {
 }
 
+.title {
+  padding-top: 20px;
+  text-align: center;
+}
+
+.form-group {
+  padding: 50px;
+}
+
 .page-one {
   display: flex;
-  flex-direction: row;
+  justify-content: stretch;
 }
 
 .left-side {
   display: flex;
   flex-direction: column;
   width: 50%;
+  padding-left: 15px;
 }
 
 .student-information {
@@ -20,7 +30,7 @@
 .student-stuff {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  padding-right: 20px;
 }
 
 .instructor-stuff {
@@ -30,4 +40,93 @@
 
 .first-paragraph {
   padding-bottom: 20px;
+}
+
+.remarks {
+  padding-top: 30px;
+}
+
+.right-side {
+  width: 50%;
+  padding-left: 100px;
+}
+
+li {
+  margin: 10px 0;
+  list-style-type: circle;
+}
+
+.agreement {
+  padding-top: 42px;
+}
+
+.signature {
+  display: flex;
+  flex-direction: row;
+}
+
+.signature > mat-form-field {
+  margin: 10px;
+}
+
+.second-row {
+}
+
+.according-to-him {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 95%;
+}
+
+.custom-form-field {
+  width: 200px;
+  height: auto;
+  font-size: 12px;
+  margin-top: 3px;
+  margin-bottom: -1.25em;
+  margin-right: 5px;
+
+  mat-datepicker-toggle {
+    font-size: 12px;
+  }
+
+  input.mat-input-element {
+    padding-bottom: 2px;
+    font-size: 12px;
+  }
+}
+
+.third-row {
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
+  margin: 8px;
+  align-items: center;
+  column-gap: 10px;
+}
+
+.ip-stuff > mat-form-field {
+  margin: 10px;
+}
+
+.second-student-signature > mat-form-field {
+  margin: 10px;
+}
+
+.button-wrapper {
+  height: 200px;
+  position: relative;
+}
+
+.vertical-center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.submit-button {
+  width: 150px;
 }
