--- a/FlightLine.App/src/app/monitoring/monitoring.component.scss
+++ b/FlightLine.App/src/app/monitoring/monitoring.component.scss
@@ -119,48 +119,48 @@
     filter: drop-shadow(5px 5px 5px #00000059);
 }
 
-.new-form div {
-    background-color: rgb(255, 222, 222);
-}
-
-.partial-form div {
-    background-color: #fff4cd;
-}
-
-.full-form div {
-    background-color: rgb(208, 229, 198);
-}
-
-.scheduled-form div {
-    background-color: #c9dbec;
-}
-
-
-
 .row-spine,
 .bold-item {
     font-weight: bold;
     padding-top: 13px !important;
 }
 
-.new-form .row-spine {
-    border-left: solid 6px rgb(255, 83, 83);
+.assigned-form div,
+.partially-scheduled-form div {
+    background-color: #fff4cd;
 }
 
-.partial-form .row-spine {
+.assigned-form .row-spine,
+.partially-scheduled-form .row-spine {
     border-left: solid 6px #ffcb06;
 }
 
-.full-form .row-spine {
+.fully-scheduled-form div {
+    background-color: rgb(208, 229, 198);
+}
+
+.fully-scheduled-form .row-spine {
     border-left: solid 6px rgb(97, 208, 46);
 }
 
-.scheduled-form .row-spine {
+.active-form div {
+    background-color: #c9dbec;
+}
+
+.active-form .row-spine {
     border-left: solid 6px #03539e;
 }
 
-.archived-form .row-spine {
-    border-left: solid 6px #9e9e9e;
+// .active-form div {
+//     background-color: rgb(223, 223, 223);
+// }
+
+// .active-form .row-spine {
+//     border-left: solid 6px #adadad;
+// }
+
+.row-spine {
+    border-left: solid 6px rgb(221, 221, 221);
 }
 
 .text-button {
