--- a/FlightLine.App/src/app/marks/marks.component.html
+++ b/FlightLine.App/src/app/marks/marks.component.html
@@ -1,12 +1,14 @@
-<div class="form">
-    <div>
-      <button mat-button class="back-button" (click)="goBack()">
-        <i class="material-icons">arrow_back_ios</i>
-        Save and Exit
-      </button>
-      <div class="form-title">Checkride Form</div>
-    </div>
-    <div class="container">
+<div class="approval-grid animated fadeIn">
+  <div>
+    <button mat-button class="back-button" (click)="goBack()">
+      <i class="material-icons">arrow_back_ios</i>
+      Back
+    </button>
+    <div class="approval-title">Give Marks</div>
+  </div>
+  <div class="form-container">
+    <div class="form">
+      <div class="container">
         <div class="form-group">
           <div class="page-one">
             <div class="left-side">
@@ -24,7 +26,7 @@
                 <div class="student-stuff">
                   <mat-form-field appearance="outline">
                     <mat-label> Student Name</mat-label>
-                    <input matInput/>
+                    <input matInput />
                   </mat-form-field>
                   <mat-form-field appearance="outline">
                     <mat-label>Student ID/Number</mat-label>
@@ -141,7 +143,7 @@
           </div>
           <div class="second-row">
             <h2>Stage/EOC Check Schedule:</h2>
-  
+
             <!--  -->
             <div class="according-to-him">
               <mat-accordion *ngFor="let row of balls">
@@ -149,8 +151,8 @@
                   <mat-expansion-panel-header>
                     <mat-panel-title> Row {{row}} </mat-panel-title>
                   </mat-expansion-panel-header>
-  
-  
+
+
                   <mat-form-field appearance="outline" class="custom-form-field">
                     <mat-label>Date</mat-label>
                     <input matInput />
@@ -183,15 +185,15 @@
                     <mat-label>Result</mat-label>
                     <input matInput />
                   </mat-form-field>
-  
-  
+
+
                 </mat-expansion-panel>
               </mat-accordion>
             </div>
             <!--  -->
-  
+
           </div>
-  
+
           <div class="third-row">
             <div class="ip-stuff">
               <mat-form-field appearance="outline">
@@ -204,7 +206,7 @@
                 <input matInput placeholder="Date" />
               </mat-form-field>
             </div>
-  
+
             <div class="second-student-signature">
               <mat-form-field appearance="outline">
                 <input matInput placeholder="Student Signature" />
@@ -213,10 +215,41 @@
                 <input matInput placeholder="Date" />
               </mat-form-field>
             </div>
-            <button class="submit-button" color="primary" mat-raised-button>
-              Submit Form
-            </button>
           </div>
         </div>
+      </div>
     </div>
   </div>
+  <div class="approval-subgrid-lol">
+    <div class="center-items">
+
+      <button mat-button class="sig-button">
+        <i class="material-icons" style="margin-right: 4px;">open_in_new</i>
+        View / Approve In ETA
+      </button>
+
+      <mat-form-field class="signature-field">
+        <mat-label>Signature</mat-label>
+        <!-- <mat-icon matPrefix>close</mat-icon> -->
+        <input matInput>
+      </mat-form-field>
+      <mat-form-field class="signature-field">
+        <mat-label>Date</mat-label>
+        <input matInput [matDatepicker]="picker69" readonly>
+        <mat-datepicker #picker69></mat-datepicker>
+      </mat-form-field>
+
+    </div>
+    <div class="remarks-container">
+      <div class="remarks-label">Remarks</div>
+      <textarea matInput class="remarks-area"></textarea>
+    </div>
+    <div class="center-items">
+      <button mat-button class="done-button">
+        <i class="material-icons" style="margin-right: 2px;">done</i>
+        Done
+      </button>
+      <div class="helper-text">Click 'Done' to complete approval and update form.</div>
+    </div>
+  </div>
+</div>
