--- a/FlightLine.App/src/app/form/form.component.html
+++ b/FlightLine.App/src/app/form/form.component.html
@@ -1,4 +1,4 @@
-<div class="form">
+<div class="form animated fadeIn">
   <div>
     <button (click)="goBack()" class="back-button" mat-button>
       <i class="material-icons">arrow_back_ios</i>
