--- a/FlightLine.App/src/app/approval/approval.component.scss
+++ b/FlightLine.App/src/app/approval/approval.component.scss
@@ -15,7 +15,6 @@
 
 .form-container {
     width: 100%;
-    text-align: center;
 }
 
 .back-button {
@@ -145,7 +144,7 @@
   display: flex;
   flex-direction: column;
   width: 50%;
-  padding-left: 15px;
+  // padding-left: 15px;
 }
 
 .student-information {
@@ -202,7 +201,7 @@ li {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 95%;
+  width: 100%;
 }
 
 .custom-form-field {
