--- a/FlightLine.App/src/app/form/form.component.scss
+++ b/FlightLine.App/src/app/form/form.component.scss
@@ -48,7 +48,7 @@
   display: flex;
   flex-direction: column;
   width: 50%;
-  padding-left: 15px;
+  // padding-left: 15px;
 }
 
 .student-information {
@@ -105,7 +105,7 @@ li {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 95%;
+  width: 100%;
 }
 
 .custom-form-field {
@@ -158,6 +158,7 @@ li {
 
 .submit-button {
   width: 150px;
+  font-weight: bold;
 }
 
 .asdf {
