--- a/FlightLine.App/src/app/marks/marks.component.html
+++ b/FlightLine.App/src/app/marks/marks.component.html
@@ -26,52 +26,52 @@
                 <div class="student-stuff">
                   <mat-form-field appearance="outline">
                     <mat-label> Student Name</mat-label>
-                    <input matInput />
+                    <input readonly [(ngModel)]="currentForm.studentName" matInput />
                   </mat-form-field>
                   <mat-form-field appearance="outline">
-                    <mat-label>Student ID/Number</mat-label>
-                    <input matInput />
+                    <mat-label>Student Number</mat-label>
+                    <input readonly [(ngModel)]="currentForm.studentNumber" matInput type="number" />
                   </mat-form-field>
                   <mat-form-field appearance="outline">
                     <mat-label>Phone Number</mat-label>
-                    <input matInput />
+                    <input readonly [(ngModel)]="currentForm.phoneNumber" matInput type="number" />
                   </mat-form-field>
                   <mat-form-field appearance="outline">
                     <mat-label>Sent to Schedule</mat-label>
-                    <input matInput />
+                    <input readonly [(ngModel)]="currentForm.sentToSchedule" matInput />
                   </mat-form-field>
                 </div>
                 <div class="instructor-stuff">
                   <mat-form-field appearance="outline">
                     <mat-label>Instructor Name</mat-label>
-                    <input matInput />
+                    <input readonly [(ngModel)]="currentForm.instructorName" matInput />
                   </mat-form-field>
                   <mat-form-field appearance="outline">
                     <mat-label>Team Number</mat-label>
-                    <input matInput />
+                    <input readonly [(ngModel)]="currentForm.teamNumber" matInput type="number" />
                   </mat-form-field>
                   <mat-form-field appearance="outline">
                     <mat-label>Last Activity Date</mat-label>
-                    <input matInput [matDatepicker]="picker" (click)="picker.open()">
-                    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                    <input readonly [(ngModel)]="currentForm.lastActivity" [matDatepicker]="picker" matInput>
+                    <!-- <mat-datepicker-toggle [for]="picker" matIconSuffix></mat-datepicker-toggle> -->
                     <mat-datepicker #picker></mat-datepicker>
                   </mat-form-field>
                   <mat-form-field appearance="outline">
                     <mat-label>TM Approval</mat-label>
-                    <input matInput />
+                    <input readonly [(ngModel)]="currentForm.tmApproval" matInput />
                   </mat-form-field>
                 </div>
               </div>
               <mat-form-field appearance="outline">
-                <textarea matInput placeholder="Remarks..." class="asdf"></textarea>
-                <input matInput />
+                <textarea class="asdf" matInput placeholder="Remarks..."></textarea>
+                <input readonly matInput />
               </mat-form-field>
             </div>
             <div class="right-side">
               <mat-accordion>
                 <mat-expansion-panel (closed)="panelOpenState = false" (opened)="panelOpenState = true">
                   <mat-expansion-panel-header>
-                    <mat-panel-title> Items Required </mat-panel-title>
+                    <mat-panel-title> Items Required</mat-panel-title>
                     <mat-panel-description>
                       {{
                       panelOpenState
@@ -133,10 +133,14 @@
               </div>
               <div class="signature">
                 <mat-form-field appearance="outline">
-                  <input matInput placeholder="Signature" />
+                  <input readonly [(ngModel)]="currentForm.studentSignatureOne" matInput placeholder="Signature" />
                 </mat-form-field>
                 <mat-form-field appearance="outline">
-                  <input matInput placeholder="Date" />
+                  <mat-label>Date</mat-label>
+                  <input readonly [(ngModel)]="currentForm.studentSignatureDateOne" [matDatepicker]="pickerTwo"
+                    matInput>
+                  <!-- <mat-datepicker-toggle [for]="pickerTwo" matIconSuffix></mat-datepicker-toggle> -->
+                  <mat-datepicker #pickerTwo></mat-datepicker>
                 </mat-form-field>
               </div>
             </div>
@@ -146,47 +150,48 @@
 
             <!--  -->
             <div class="according-to-him">
-              <mat-accordion *ngFor="let row of balls">
+              <mat-accordion *ngFor="let row of currentForm.stageScheduleEntries; let indexOfelement = index;">
+
                 <mat-expansion-panel [expanded]="true">
                   <mat-expansion-panel-header>
-                    <mat-panel-title> Row {{row}} </mat-panel-title>
+                    <mat-panel-title> Row {{indexOfelement + 1}} </mat-panel-title>
                   </mat-expansion-panel-header>
 
-
-                  <mat-form-field appearance="outline" class="custom-form-field">
-                    <mat-label>Date</mat-label>
-                    <input matInput />
-                  </mat-form-field>
                   <mat-form-field appearance="outline" class="custom-form-field">
                     <mat-label>Time</mat-label>
-                    <input matInput />
+                    <input [(ngModel)]="row.time" class="my-input" matInput />
                   </mat-form-field>
                   <mat-form-field appearance="outline" class="custom-form-field">
                     <mat-label>IP Name</mat-label>
-                    <input matInput />
+                    <input [(ngModel)]="row.ipName" class="my-input" matInput />
                   </mat-form-field>
                   <mat-form-field appearance="outline" class="custom-form-field">
                     <mat-label>Type</mat-label>
-                    <input matInput />
+                    <input [(ngModel)]="row.type" class="my-input" matInput />
                   </mat-form-field>
                   <mat-form-field appearance="outline" class="custom-form-field">
                     <mat-label>Unit</mat-label>
-                    <input matInput />
+                    <input [(ngModel)]="row.unit" matInput />
                   </mat-form-field>
                   <mat-form-field appearance="outline" class="custom-form-field">
-                    <mat-label>HRS</mat-label>
-                    <input matInput />
+                    <mat-label>Hours</mat-label>
+                    <input [(ngModel)]="row.hours" matInput type="number" />
                   </mat-form-field>
                   <mat-form-field appearance="outline" class="custom-form-field">
                     <mat-label>A/C</mat-label>
-                    <input matInput />
+                    <input [(ngModel)]="row.lastActivity" matInput />
                   </mat-form-field>
                   <mat-form-field appearance="outline" class="custom-form-field">
                     <mat-label>Result</mat-label>
-                    <input matInput />
+                    <input [(ngModel)]="row.result" matInput />
                   </mat-form-field>
-
-
+                  <mat-form-field appearance="outline" class="my-date-picker">
+                    <mat-label>Last Activity Date</mat-label>
+                    <input (click)="dynamicpicker.open()" [(ngModel)]="row.date" [matDatepicker]="dynamicpicker"
+                      matInput>
+                    <mat-datepicker-toggle [for]="dynamicpicker" matIconSuffix></mat-datepicker-toggle>
+                    <mat-datepicker #dynamicpicker></mat-datepicker>
+                  </mat-form-field>
                 </mat-expansion-panel>
               </mat-accordion>
             </div>
@@ -197,59 +202,45 @@
           <div class="third-row">
             <div class="ip-stuff">
               <mat-form-field appearance="outline">
-                <input matInput placeholder="IP Name" />
+                <input readonly [(ngModel)]="currentForm.ipName" matInput placeholder="IP Name" />
               </mat-form-field>
               <mat-form-field appearance="outline">
-                <input matInput placeholder="IP Signature" />
+                <input readonly [(ngModel)]="currentForm.ipSignature" matInput placeholder="IP Signature" />
               </mat-form-field>
               <mat-form-field appearance="outline">
-                <input matInput placeholder="Date" />
+                <mat-label>Date</mat-label>
+                <input readonly [(ngModel)]="currentForm.ipSignatureDate" [matDatepicker]="pickerThree" matInput>
+                <!-- <mat-datepicker-toggle [for]="pickerThree" matIconSuffix></mat-datepicker-toggle> -->
+                <mat-datepicker #pickerThree></mat-datepicker>
               </mat-form-field>
             </div>
 
             <div class="second-student-signature">
               <mat-form-field appearance="outline">
-                <input matInput placeholder="Student Signature" />
+                <input readonly [(ngModel)]="currentForm.studentSignatureTwo" matInput
+                  placeholder="Student Signature" />
               </mat-form-field>
               <mat-form-field appearance="outline">
-                <input matInput placeholder="Date" />
+                <mat-label>Date</mat-label>
+
+                <input readonly [(ngModel)]="currentForm.studentSignatureDateTwo" [matDatepicker]="pickerFour" matInput>
+                <!-- <mat-datepicker-toggle [for]="pickerFour" matIconSuffix></mat-datepicker-toggle> -->
+                <mat-datepicker #pickerFour></mat-datepicker>
               </mat-form-field>
             </div>
           </div>
         </div>
       </div>
     </div>
+
   </div>
   <div class="approval-subgrid-lol">
-    <div class="center-items">
-
-      <button mat-button class="sig-button">
-        <i class="material-icons" style="margin-right: 4px;">open_in_new</i>
-        View / Approve In ETA
-      </button>
-
-      <mat-form-field class="signature-field">
-        <mat-label>Signature</mat-label>
-        <!-- <mat-icon matPrefix>close</mat-icon> -->
-        <input matInput>
-      </mat-form-field>
-      <mat-form-field class="signature-field">
-        <mat-label>Date</mat-label>
-        <input matInput [matDatepicker]="picker69" readonly>
-        <mat-datepicker #picker69></mat-datepicker>
-      </mat-form-field>
-
-    </div>
-    <div class="remarks-container">
-      <div class="remarks-label">Remarks</div>
-      <textarea matInput class="remarks-area"></textarea>
-    </div>
     <div class="center-items">
       <button mat-button class="done-button">
         <i class="material-icons" style="margin-right: 2px;">done</i>
         Done
       </button>
-      <div class="helper-text">Click 'Done' to complete approval and update form.</div>
+      <div class="helper-text">Click 'Done' to complete marks and update form.</div>
     </div>
   </div>
 </div>
