--- a/FlightLine.App/src/app/marks/marks.component.html
+++ b/FlightLine.App/src/app/marks/marks.component.html
@@ -236,7 +236,7 @@
   </div>
   <div class="approval-subgrid-lol">
     <div class="center-items">
-      <button mat-button class="done-button">
+      <button mat-button class="done-button" (click)="saveForm()">
         <i class="material-icons" style="margin-right: 2px;">done</i>
         Done
       </button>
